--- a/src/styles.css
+++ b/src/styles.css
@@ -95,6 +95,10 @@ button:hover {
   color: var(--black-color);
 }
 
+button > p{
+  font-size: smaller;
+}
+
 input {
   margin: 5px 0 25px;
   margin-top: 20px;
@@ -135,6 +139,11 @@ input {
     padding: 8px;
     width: 90%;
   }
+
+  button{
+    width: 40px;
+    height: 40px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -166,16 +175,18 @@ input {
   }
 
   button, input {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     width: 100%;
     max-width: 300px;
+  }
+
+  button{
+    width: 70px;
+    height: 70px;
   }
 }
 
 @media (min-width: 1024px) {
-  time {
-    font-size: clamp(3rem, 9vw, 6rem);
-  }
 
   nav > ul {
     justify-content: space-around;
