--- a/src/styles.css
+++ b/src/styles.css
@@ -74,7 +74,7 @@ time {
 }
 
 button{
-  width: 120px;
+  width: 140px;
   height: 100px;
 }
 
@@ -97,6 +97,7 @@ button:hover {
 
 button > p{
   font-size: smaller;
+  padding-bottom: 10px;
 }
 
 input {
